--- a/index.html
+++ b/index.html
@@ -187,9 +187,53 @@
 
         <!--========== PAGE CONTENT ==========-->
         <!-- Features -->
-        <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-125--sm">
-
-        </div>
+        <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-85--sm">
+                   <div class="g-text-center--xs g-margin-b-100--xs">
+                       <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Welkom op Asya meubelen!</p>
+                       <h2 class="g-font-size-32--xs g-font-size-36--md">We Create Beautiful Experiences <br> That Drive Successful Businesses.</h2>
+                   </div>
+                   <div class="row g-margin-b-60--xs g-margin-b-70--md">
+                       <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
+                           <div class="clearfix">
+                               <div class="g-media g-width-30--xs">
+                                   <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".1s">
+                                       <i class="g-font-size-28--xs g-color--primary ti-desktop"></i>
+                                   </div>
+                               </div>
+                               <div class="g-media__body g-padding-x-20--xs">
+                                   <h3 class="g-font-size-18--xs">Responsive Layout</h3>
+                                   <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
+                           <div class="clearfix">
+                               <div class="g-media g-width-30--xs">
+                                   <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".2s">
+                                       <i class="g-font-size-28--xs g-color--primary ti-settings"></i>
+                                   </div>
+                               </div>
+                               <div class="g-media__body g-padding-x-20--xs">
+                                   <h3 class="g-font-size-18--xs">Fully Customizable</h3>
+                                   <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-4">
+                           <div class="clearfix">
+                               <div class="g-media g-width-30--xs">
+                                   <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".3s">
+                                       <i class="g-font-size-28--xs g-color--primary ti-ruler-alt-2"></i>
+                                   </div>
+                               </div>
+                               <div class="g-media__body g-padding-x-20--xs">
+                                   <h3 class="g-font-size-18--xs">Pixel Perfect</h3>
+                                   <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                 </div>
         <!-- End Features -->
 
         <!-- Parallax -->
@@ -223,7 +267,7 @@
                 </div>
             </div>
             <div class="col-sm-3 g-promo-section__img-right--lg g-bg-position--center g-height-100-percent--md js__fullwidth-img">
-                <img class="img-responsive" src="img/970x970/03.jpg" alt="Image">
+                <img class="img-responsive" src="img/side-img.jpg" alt="Image">
             </div>
         </div>
         <!-- End Culture -->
@@ -231,14 +275,14 @@
         <!-- News -->
         <div class="container g-padding-y-80--xs g-padding-y-125--sm">
             <div class="g-text-center--xs g-margin-b-80--xs">
-                <h2 class="g-font-size-32--xs g-font-size-36--md">Soorten banken</h2>
+                <h2 class="g-font-size-32--xs g-font-size-36--md">Onze bankenstellen</h2>
             </div>
             <div class="row">
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/6.jpeg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <a href=""><img class="img-responsive" src="img/6.jpeg" alt="Image"></a>
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
                     </article>
@@ -248,7 +292,7 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/azura.jpeg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
                     </article>
@@ -258,7 +302,7 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/chesterfield2.jpg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
                     </article>
@@ -268,7 +312,7 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/como.jpg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
                     </article>
@@ -278,7 +322,7 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/kaya.jpeg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
                     </article>
@@ -288,7 +332,7 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/olivia.jpg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
                     </article>
