--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                         <div class="g-margin-b-30--xs">
                             <h1 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">Lorem ipsum dolor</h1>
                         </div>
-                        <a class="js__popup__youtube" href="#" title="Intro Video">
+                        <!-- <a class="js__popup__youtube" href="#" title="Intro Video">
                             <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
                 <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/chicago.jpg');">
@@ -152,9 +152,9 @@
                             <div class="g-margin-b-30--xs">
                                 <h2 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">De Beste groothandel</h2>
                             </div>
-                            <a class="js__popup__youtube" href="#" title="Intro Video">
+                            <!-- <a class="js__popup__youtube" href="#" title="Intro Video">
                                 <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -164,9 +164,9 @@
                             <div class="g-margin-b-30--xs">
                                 <h2 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">De Beste groothandel</h2>
                             </div>
-                            <a class="js__popup__youtube" href="#" title="Intro Video">
+                            <!-- <a class="js__popup__youtube" href="#" title="Intro Video">
                                 <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -189,8 +189,8 @@
         <!-- Features -->
         <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-85--sm">
                    <div class="g-text-center--xs g-margin-b-100--xs">
-                       <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Welkom op Asya meubelen!</p>
-                       <h2 class="g-font-size-32--xs g-font-size-36--md">We Create Beautiful Experiences <br> That Drive Successful Businesses.</h2>
+                       <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Welkom op Asya meubelen</p>
+                       <h2 class="g-font-size-32--xs g-font-size-36--md">Wij bezorgen u een geweldige ervaring <br> Die uw bedrijf helpt succesvol te worden!</h2>
                    </div>
                    <div class="row g-margin-b-60--xs g-margin-b-70--md">
                        <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
@@ -291,7 +291,7 @@
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/azura.jpeg" alt="Image">
+                          <a href=""><img class="img-responsive" src="img/azura.jpeg" alt="Image"></a>
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -301,7 +301,7 @@
                 <div class="col-sm-4">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/chesterfield2.jpg" alt="Image">
+                          <a href=""><img class="img-responsive" src="img/chesterfield2.jpg" alt="Image"></a>
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -311,7 +311,7 @@
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/como.jpg" alt="Image">
+                          <a href=""><img class="img-responsive" src="img/como.jpg" alt="Image"></a>
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -321,7 +321,7 @@
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/kaya.jpeg" alt="Image">
+                          <a href=""><img class="img-responsive" src="img/kaya.jpeg" alt="Image"></a>
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -331,7 +331,7 @@
                 <div class="col-sm-4">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/olivia.jpg" alt="Image">
+                          <a href=""><img class="img-responsive" src="img/olivia.jpg" alt="Image"></a>
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
