--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Titel</title>
+        <title>Asya Meubelen | Welkom</title>
         <meta name="keywords" content="Meubel groothandel" />
         <meta name="description" content="Groothandel in meubels">
         <meta name="author" content="Kagan Dag">
@@ -349,9 +349,10 @@
                     <div class="row">
                         <div class="col-sm-2 g-margin-b-20--xs g-margin-b-0--md">
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="index.html">Home</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">About</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Work</a></li>
+                                <!-- <li><a class="g-font-size-15--xs g-color--white-opacity" href="index.html">Home</a></li> -->
+                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Over ons</a></li>
+                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Banken op maat</a></li>
+                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Prijzen</a></li>
                                 <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Contact</a></li>
                             </ul>
                         </div>
